# agent-scaling

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_scaling/: cache.py  exp_runner.py  langfuse_client.py  logger.py  utils.py
agent_scaling/agents/: __init__.py  base.py  direct_prompt.py  multiagent_centralized.py  registry.py  single_agent.py  single_agent_cot.py
agent_scaling/config/: dataset.py  env.py  llm.py  prompts.py  run.py
agent_scaling/datasets/: __init__.py  base.py  browsecomp.py  gaia.py  gsm8k.py  healthbench.py  nejm.py  plancraft.py  registry.py  simpleqa.py
agent_scaling/env/: __init__.py  base.py  basic.py  browsecomp.py  plancraft.py  registry.py  web_search.py
agent_scaling/llm/: __init__.py  litellm_lc.py  llm_grader.py
datasets/: browsecomp_plus_sampled_100.json  browsecomp_sampled_5_per_category.json  gsm8k.yaml  plancraft-test.json  simpleqa_sampled.yaml
example_outputs/: README.md
prompts/: gsm8k-answer-generation.yaml  gsm8k-final-answer.yaml  gsm8k-reasoning-extraction.yaml
prompts/dataset-shared/: multiagent_simpleqa.yaml  plancraft.yaml  simpleqa.yaml
prompts/direct-prompt/: direct-prompt.yaml
prompts/eval/: browsecomp-grader.yaml  grader.yaml  qa-grader.yaml
prompts/multi-agent/: agent_feedback.yaml  lead_agent.yaml  subagent.yaml
prompts/multiagent_research/: agent_decision.yaml  lead_agent.yaml  orchestration_decision.yaml  subagent.yaml
prompts/single-agent/: single-agent.yaml
run_conf/: run_exp.yaml
run_conf/agent/: direct-prompt.yaml  multi-agent-centralized.yaml  (+6 more)
run_scripts/: run_experiment.py
(+42 files in other folders)
