[project]
name = "agent_scaling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langchain-litellm>=0.2.1",
    "langchain-tavily>=0.2.10",
    "langfun[all]>=0.0.1",
    "langfuse>=3.0",
    "litellm[caching]>=1.73.6",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pandas>=2.3.0",
    "plancraft>=0.4.9",
    "pytest>=7.0.0",
    "tavily-python>=0.7.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
